# docuquery

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  task-definition.example.json  task-definition.json
.github/workflows/: ci.yml
app/: auth.py  database.py  ingest.py  main.py  models.py  query.py  setup_pinecone.py
app/data/chroma_persist/: chroma.sqlite3
app/eval/: golden_set.py  judge.py  run_eval.py  run_llm_eval.py
app/routers/: auth.py  documents.py
