[project]
name = "docuquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-openai>=1.3.4",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "passlib[bcrypt]>=1.7.4",
    "pinecone>=7.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
